objects/Payment__c.object
<CustomObject>
    <label>Payment</label>
    <nameField>
        <displayFormat>A-{0000}</displayFormat>
        <label>Payment ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Payments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <fields>
        <fullName>Case__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Case</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>$Source.installments_period__c</field>
                <operation>equals</operation>
                <value>2 month</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Payments</relationshipLabel>
        <relationshipName>Payments</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Truck_booking__c</fullName>
        <label>Truck booking</label>
        <referenceTo>Truck_booking__c</referenceTo>
        <relationshipLabel>Payments</relationshipLabel>
        <relationshipName>Payments</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Payment_Method__c</fullName>
        <label>Payment Method</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Full payment</fullName>
                </value>
                <value>
                    <fullName>half Payment</fullName>
                </value>
                <value>
                    <fullName>installment</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>installments_period__c</fullName>
        <label>installments period</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Payment_Method__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1 month</fullName>
                </value>
                <value>
                    <fullName>2 month</fullName>
                </value>
                <value>
                    <fullName>3 month</fullName>
                </value>
                <value>
                    <fullName>4 month</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Total_Value_You_Have_To_Pay__c</fullName>
        <label>Total Value You Have To Pay</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
</CustomObject>